--- a/ibsen.css
+++ b/ibsen.css
@@ -63,57 +63,46 @@
     text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
   }
 
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
 
-/* Header styling */
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
 
-/* Navigation styling */
-nav {
-    background-color: #444;
-    text-align: center;
-    padding: 10px;
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-    margin: 10px;
-    font-size: 18px;
-}
-
-/* Content container */
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-/* Icons */
-.icon {
-    font-size: 36px;
-    margin-right: 10px;
-}
-
-/* Image */
+/* Main image styles */
 .main-image {
     max-width: 100%;
     height: auto;
+    display: block;
+    margin: 20px auto;
 }
 
-/* Footer styling */
+/* Footer styles */
 footer {
     background-color: #333;
     color: #fff;
-    padding: 20px;
     text-align: center;
+    padding: 10px 0;
 }
+
+/* Navbar styles */
+.navbar {
+    display: flex;
+    justify-content: center;
+}
+
+/* Navbar link styles */
+.navbar-link {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 20px;
+    font-size: 18px;
+}
+
+/* Icon styles within the navbar links */
+.navbar-link .icon {
+    margin-right: 5px;
+    font-size: 20px;
+}
+
+/* Hover effect for navbar links */
+.navbar-link:hover {
+    text-decoration: underline;
+}
+
